# LaboCribles

./: .gitignore  CMakeLists.txt  CountListTableau.cpp  InitTableau.cpp  README.md  affichageTableau.cpp  affichageTableau.h  checkNbPremier.cpp  checkNbPremier.h  countListTableau.h  initTableau.h  main.cpp  nombrePremier.cpp  saisieVerification.cpp  saisieVerification.h
